// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schedule email recipients utils > split schedule email recipients > with comma delimiter 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
  {
    "email": "external1@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > split schedule email recipients > with multiple delimiter 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
  {
    "email": "external1@gooddata.com",
  },
  {
    "email": "external2@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > split schedule email recipients > with semicolon delimiter 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
  {
    "email": "external1@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > split schedule email recipients > with space delimiter 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
  {
    "email": "external1@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > split schedule email recipients > with unsupported delimiter 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com|new_external@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > unique schedule email recipients > with existing email duplicate 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > unique schedule email recipients > with external and existing email are duplicate 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > unique schedule email recipients > with external email duplicate 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
]
`;

exports[`schedule email recipients utils > unique schedule email recipients > without duplicate 1`] = `
[
  {
    "user": {
      "email": "test@gooddata.com",
      "firstName": "First name",
      "fullName": "Full name",
      "lastName": "Last name",
      "login": "test@gooddata.com",
      "ref": {
        "uri": "/gdc/account/profile/123456",
      },
    },
  },
  {
    "email": "external@gooddata.com",
  },
]
`;
